# cpp_homeworks

./: .gitignore  README.md
homework_1/task_2/: README.md
homework_1/task_2/src/: CMakeLists.txt
homework_2/task_1/: CMakeLists.txt
homework_2/task_1/src/: main.cpp
homework_2/task_2/: CMakeLists.txt
homework_2/task_2/src/: main.cpp
homework_3/: CMakeLists.txt
homework_3/html_writer/: CMakeLists.txt
homework_3/html_writer/include/: html_writer.hpp
homework_3/html_writer/src/: html_writer.cpp
homework_3/image_browser/: CMakeLists.txt
homework_3/image_browser/include/: image_browser.hpp
homework_3/image_browser/src/: image_browser.cpp
homework_3/src/: main.cpp
homework_3/web_app/: test.html
homework_4/: CMakeLists.txt
homework_4/include/: homework_4.hpp  ipb_algorithm.hpp
homework_4/src/: homework_4.cpp  main.cpp
